# chapter-dong-dong

./: .gitignore  Cargo.toml  Dockerfile  README.md  channels.go  config.yaml.example  go.mod  go.sum  main.go
.github/workflows/: actionlint.yml  build.yml  deploy.yml  release.yml  test.yml  test_and_deploy.yml
cmd/: root.go  run.go
config/: config.go
discord/: channels.go
scappers/: context.go  scrappers.go  sequential.go
scrappers/: context.go  scrappers.go  sequential.go
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/discord/: client.rs  command.rs  mod.rs
src/scraper/: asura.rs  mod.rs  updated_chapter.rs
src/storage/: storage.rs
