[package]
name = "chapter-dong-dong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
poise = "0.6.1"
regex = "1.11.0"
reqwest = "0.12.8"
scraper = "0.20.0"
serenity = "0.12.2"
simplelog = { version = "0.12.2", features = ["paris"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }

